--- a/sass/Instruction.sass
+++ b/sass/Instruction.sass
@@ -29,75 +29,61 @@ body
 
 
 .container 
+    overflow: hidden
     display: grid
     grid-template-rows: auto 1fr auto
     min-height: 100vh
     .header
-        padding: 2.08vw 4.16vw 0 4.16vw
+        padding:2.08vw 4.16vw 0 4.16vw       
         margin-bottom: 140px
         .nav
-            margin-bottom: 15px
             width: auto
             display: flex
             justify-content: space-between
-            align-items: center
+            margin-bottom: 25px
             .burger__container
                 display: none
-            .header__liFirst
-                //margin-right: 17.5vw//336px
-                font: bold 28px 'e-Ukraine'
-                color: #1A5653
-                margin-right: 40px
+            .header__logo
+                width: 250px
+                height: 100%
             .header__ol
-                height: min-content
                 display: flex
                 align-items: center
                 .header__li
-                    height: min-content
                     text-align: center
                     margin-right: 3.125vw//60px
                     a
                         text-decoration: none
-                        font: 400 1.1vw 'Manrope'
+                        font: 400 22px 'Manrope'
                         color: #1A5653
+                    a:hover 
+                        cursor: pointer
+                        border-bottom: 1px solid #1A5653
+                    .last_a:hover
+                        border-bottom: 0
                 .header__li:last-child
+                    display: flex
+                    align-items: center
                     margin: 0
                     cursor: pointer
-        .header__section
-            height: 90%
-            display: flex
-            justify-content: center
-            align-items: center
-            div
-                h1
-                    font: 700 64px 'e-Ukraine'
-                    color: #0b0a0a8e8
-                    margin-bottom: 50px
-                p
-                    font: 400 32px 'Manrope'
-                    color: #1A5653
-                    text-align: center
-                    margin-bottom: 90px
-                div
-                    display: flex
-                    justify-content: center
-                    button
-                        padding: 24px 60px
-                        background:  #1A5653
-                        border-radius: 999px
-                        a
-                            text-decoration: none
-                            text-align: center
-                            font: 600 24px 'Manrope'
-                            color:  #1A5653
+                    a
+                        display: flex
+                        align-items: center
+                        
+                        span
+                            margin-right: 15px
+                            border-bottom: 1px solid black
+                        img
+                            width: 2.5vw
+                            height: 2.5vw
         .header__navigation
             a,p
-                color: black
+                color: grey
                 text-decoration: none
                 display: inline
-                font: 400 1.1vw 'Manrope'
-            a
-                color: grey
+                font: 400 18px 'Manrope'
+            p
+                color: #1A5653
     .main
         padding:  0 3.12vw//80px
         .main__section1
@@ -232,26 +218,28 @@ body
                         background: #1A5653
                         border-radius: 30px
     .footer
-        padding: 3.12vw 4.16vw 6.25vw 4.16vw  //60px 80px 120px 80px
+        padding: 3.12vw 6.16vw 4.25vw 4.16vw  //60px 80px 120px 80px
         background: rgb(26, 86, 83)
         border-top-left-radius: 30px
         border-top-right-radius: 30px
         div
             display: flex
             justify-content: space-between
-            .header__liFirst
-                font: bold 28px 'e-Ukraine'
-                color: #fff
+            .header__logo
+                width: 250px
+                height: 55px
             .footer_wrapper
                 display: flex
                 .footer__list1 ,.footer__list2
                     li
-                        color: rgb(245,245,245)
                         font: 300 20px 'Manrope'
+                        color: rgb(245,245,245)
                         margin-bottom: 20px
                         a
                             text-decoration: none
                             color: rgb(245,245,245)
+                        a:hover 
+                            border-bottom: 1.5px solid #fff
                 .footer__list1
                     margin-right: 11.97vw //215px
                     li:first-child
@@ -262,6 +250,7 @@ body
                 .footer__list2
                     li:last-child
                         margin: 0
+
 .swiper-slide1_block::-webkit-scrollbar
     width: 3px 
     height: 3px
@@ -357,6 +346,55 @@ body
                     .footer__list2
                         li:last-child
                             margin: 0
+
+@media screen and ( max-width:1610px  )
+    .container
+        .header
+            margin-bottom: 70px
+            .nav
+                display: flex
+                justify-content: space-between
+                margin-bottom: 25px
+                .header__logo
+                    width: 200px
+                    margin-right: 30px
+                .header__ol
+                    display: flex
+                    align-items: center
+                    .header__li
+                        margin-right: 3.125vw//60px
+                        a
+                            text-decoration: none
+                            font: 400 15px 'Manrope'
+                    .header__li:last-child
+                        margin: 0
+            .header__navigation
+                a,p
+                    color: grey
+                    text-decoration: none
+                    display: inline
+                    font: 400 14px 'Manrope'
+                p
+                color: #1A5653
+        .footer
+            padding: 3.12vw 3.16vw 3.25vw 3.16vw
+            div
+                .header__logo
+                    width: 200px
+                    height: 44px
+                .footer_wrapper
+                    .footer__list1 ,.footer__list2
+                        li
+                            font: 300 14px 'Manrope'
+                            margin-bottom: 10px
+                            a
+                                text-decoration: none
+                                color: rgb(245,245,245)
+                    .footer__list1
+                        li:first-child
+                            font: 500 16px 'Manrope'  
+                            margin-bottom: 40px
+
 @media screen and ( max-width:1500px  )                           
     .container 
         .header__ol
@@ -370,7 +408,34 @@ body
                     .section1__button button 
                         font: 500 14px 'Manrope'
 @media screen and ( max-width:1300px)
-    .container 
+    .container
+        .header
+            margin-bottom: 70px
+            .nav
+                display: flex
+                justify-content: space-between
+                margin-bottom: 10px
+                .header__logo
+                    width: 120px
+                    margin-right: 30px
+                .header__ol
+                    display: flex
+                    align-items: center
+                    .header__li
+                        margin-right: 3.125vw//60px
+                        a
+                            text-decoration: none
+                            font: 400 12px 'Manrope'
+                    .header__li:last-child
+                        margin: 0  
+            .header__navigation
+                a,p
+                    color: grey
+                    text-decoration: none
+                    display: inline
+                    font: 400 10px 'Manrope'
+                p
+                    color: #1A5653  
         .main 
             .main__section1 
                 .section1__container 
@@ -390,13 +455,68 @@ body
                                                         margin-bottom: 0px 
                                     .pagination
                                         --swiper-pagination-bullet-horizontal-gap: 3px
+        .footer
+            padding: 3.12vw 5.16vw 3.25vw 4.16vw
+            div
+                .header__logo
+                    width: 120px
+                    height: 27px
+                .footer_wrapper
+                    height: 110px
+                    .footer__list1 ,.footer__list2
+                        height: 100%
+                        li
+                            font: 300 10px 'Manrope'
+                            margin-bottom: 5px
+                            a
+                                text-decoration: none
+                                color: rgb(245,245,245)
+                    .footer__list1
+                        display: flex
+                        flex-direction: column
+                        li:first-child
+                            height: 100%
+                            display: flex
+                            flex: 1
+                            font: 500 12px 'Manrope' 
+                            margin-bottom: 0 
 
-@media screen and (max-width: 1024px)
+
+@media screen and (max-width: 1050px)
     .container 
-        .header 
-            .nav 
-                .header__liFirst
-                    font-size: 16px
+        .header
+            margin-bottom: 70px
+            .nav
+                display: flex
+                justify-content: space-between
+                .header__logo
+
+                .header__ol
+                    display: flex
+                    align-items: center
+                    .header__li
+                        margin-right: 3.125vw//60px
+                        a
+                            text-decoration: none
+                            font: 400 10px 'Manrope'
+                    .header__li:last-child
+                        display: flex
+                        align-items: center
+                        margin: 0
+                        cursor: pointer
+                        a
+                            display: flex
+                            align-items: center
+                            
+                            span
+                                margin-right: 10px
+                            img
+                                width: 2.5vw
+                                height: 2.5vw
+            .header__navigation 
+                a,p
+                    font-size: 8px
+
 @media screen and ( max-width:769px  )//1236px//769
     .container
         box-sizing: border-box
@@ -406,20 +526,20 @@ body
             overflow: hidden
             position: relative
             margin-bottom: 40px
+            height: auto
             .nav
                 position: relative
                 overflow: hidden
-                display: flex
-                justify-content: space-between
-                .header__liFirst
+                height: auto
+                margin-bottom: 10px
+                .header__logo_off
                     display: none
-                    //margin-right: 17.5vw//336px
-                    font: bold 16px 'e-Ukraine'
-                    color: #fff
-                    margin-right: 0
+                .header__logo
+                    margin: 0
                 .burger__container
                     display: block
                     box-sizing: border-box
+                    padding: 0
                     width: 100%
                     height: auto//100vh
                     position: relative
@@ -428,9 +548,11 @@ body
                         display: flex
                         align-items: center
                         justify-content: space-between
+                        margin-bottom: 0
                         .burder__logo_block
                             display: flex
                             align-items: center
+                            cursor: pointer
                             .burder__logo_wrapper
                                 width: 30px
                                 height: min-content
@@ -443,16 +565,18 @@ body
                                     margin: 0
                         .header__liFirst1  
                             font: bold 16px 'e-Ukraine'
-                            color: #fff
+                            color: #1A5653
                         .burger__profile
                             img
                                 width: 30px
                                 height: 30px
                     .burger__block2
                         display: none
-                        width: 100%
-                        height: 100vh
-                        justify-content: center
+                        transform: translate(-50%, -50%)
+                        left: 50%
+                        top: 50%
+                        position: absolute
+                        height: min-content
                         .header__ol1
                             position: static
                             display: block
@@ -485,8 +609,8 @@ body
                             width: 30px
                             height: 30px
             .header__navigation
-                a,p
-                    font-size: 11px
+               
+              
             
         .main
             padding:  0 4.16vw//0 80px
@@ -652,66 +776,47 @@ body
                         border-radius: 30px
 
         .footer
-            display: flex
-            padding: 3.12vw 4.16vw 6.25vw 4.16vw  //60px 80px 120px 80px
-            background: rgb(26, 86, 83)
-            border-top-left-radius: 10px//30px
-            border-top-right-radius: 10px//30px
+            padding: 3.12vw 6.16vw 3.25vw 4.16vw
             div
-                width: 100%
-                display: flex
-                justify-content: space-between
-                .header__liFirst
-                    display: block
-                    text-align: center
-                    font: bold 18px 'e-Ukraine'
-                    color: #fff
-                    margin-bottom:20px
+                .header__logo
+                    width: 120px
+                    height: 27px
                 .footer_wrapper
-                    width: auto
-                    display: flex
+                    height: 90px
                     .footer__list1 ,.footer__list2
+                        height: 100%
                         li
-                            font: 300 11px 'Manrope'
+                            font: 300 8px 'Manrope'
                             margin-bottom: 5px
                             a
                                 text-decoration: none
                                 color: rgb(245,245,245)
                     .footer__list1
-                        margin-right:3vw //11.97px //215px
-                        margin-bottom: 0//20px
+                        display: flex
+                        flex-direction: column
                         li:first-child
-                            font: 500 12px 'Manrope'  
-                            margin-bottom: 20px
-                        li:last-child
-                            margin: 0
-                    .footer__list2
-                        li:last-child
-                            margin: 0
+                            height: 100%
+                            display: flex
+                            flex: 1
+                            font: 500 10px 'Manrope' 
+                            margin-bottom: 0 
 
-@media screen and ( max-width:440px  )//1236px/// 425px
+@media screen and ( max-width:480px  )//1236px/// 425px
     .container
         .header
-            padding: 4.08vw 4.16vw 0 4.16vw
-
             overflow: hidden
             position: relative
             margin-bottom: 40px
+            padding: 4.16vw 4.16vw 0 4.16vw       
             .nav
                 position: relative
                 overflow: hidden
                 display: flex
                 justify-content: space-between
-                
-                .header__liFirst
-                    display: none
-                    font: bold 16px 'e-Ukraine'
-                    color: #fff
-                    margin-right: 0
                 .burger__container
                     display: block
                     box-sizing: border-box
-                    padding: 0
+                    padding: 0//20px 20px 0 20px
                     width: 100%
                     height: auto//100vh
                     position: relative
@@ -720,7 +825,6 @@ body
                         display: flex
                         align-items: center
                         justify-content: space-between
-                        margin-bottom: 0
                         .burder__logo_block
                             display: flex
                             align-items: center
@@ -743,9 +847,6 @@ body
                                 height: 30px
                     .burger__block2
                         display: none
-                        width: 100%
-                        height: 100vh
-                        justify-content: center
                         .header__ol1
                             position: static
                             display: block
@@ -939,36 +1040,27 @@ body
             display: flex
             justify-content: center
             padding: 40px 0 //1.5vw 2.08vw 3.10vw 2.08vw  //60px 80px 120px 80px
-            background: rgb(26, 86, 83)
-            border-top-left-radius: 10px//30px
-            border-top-right-radius: 10px//30px
             div
-                display: block
-                .header__liFirst
-                    display: block
-                    text-align: center
-                    font: bold 18px 'e-Ukraine'
-                    color: #fff
-                    margin: 0
+                display: flex
+                flex-direction: column
+                align-items: center
+                .header__logo
                     margin-bottom:20px
                 .footer_wrapper
+                    height: auto
                     display: block
                     .footer__list1 ,.footer__list2
                         li
                             text-align: center
                             font: 300 9px 'Manrope'
                             margin-bottom: 5px
-                            a
-                                text-decoration: none
-                                color: rgb(245,245,245)
                     .footer__list1
                         margin-right: 0//3vw //11.97px //215px
                         margin-bottom: 20px
+                        height: min-content
                         li:first-child
                             font: 500 10px 'Manrope'  
                             margin-bottom: 12px
-                        li:last-child
-                            margin: 0
-                    .footer__list2
+                            flex: 0
                         li:last-child
                             margin: 0
