--- a/css/Instruction.css
+++ b/css/Instruction.css
@@ -32,6 +32,7 @@ body {
 }
 
 .container {
+  overflow: hidden;
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
@@ -41,79 +42,64 @@ body {
   margin-bottom: 140px;
 }
 .container .header .nav {
-  margin-bottom: 15px;
   width: auto;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  margin-bottom: 25px;
 }
 .container .header .nav .burger__container {
   display: none;
 }
-.container .header .nav .header__liFirst {
-  font: bold 28px "e-Ukraine";
-  color: #1A5653;
-  margin-right: 40px;
+.container .header .nav .header__logo {
+  width: 250px;
+  height: 100%;
 }
 .container .header .nav .header__ol {
-  height: min-content;
   display: flex;
   align-items: center;
 }
 .container .header .nav .header__ol .header__li {
-  height: min-content;
   text-align: center;
   margin-right: 3.125vw;
 }
 .container .header .nav .header__ol .header__li a {
   text-decoration: none;
-  font: 400 1.1vw "Manrope";
+  font: 400 22px "Manrope";
   color: #1A5653;
 }
+.container .header .nav .header__ol .header__li a:hover {
+  cursor: pointer;
+  border-bottom: 1px solid #1A5653;
+}
+.container .header .nav .header__ol .header__li .last_a:hover {
+  border-bottom: 0;
+}
 .container .header .nav .header__ol .header__li:last-child {
+  display: flex;
+  align-items: center;
   margin: 0;
   cursor: pointer;
 }
-.container .header .header__section {
-  height: 90%;
+.container .header .nav .header__ol .header__li:last-child a {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
-.container .header .header__section div h1 {
-  font: 700 64px "e-Ukraine";
-  color: rgba(11, 10, 10, 0.5568627451) 8;
-  margin-bottom: 50px;
+.container .header .nav .header__ol .header__li:last-child a span {
+  margin-right: 15px;
+  border-bottom: 1px solid black;
 }
-.container .header .header__section div p {
-  font: 400 32px "Manrope";
-  color: #1A5653;
-  text-align: center;
-  margin-bottom: 90px;
-}
-.container .header .header__section div div {
-  display: flex;
-  justify-content: center;
-}
-.container .header .header__section div div button {
-  padding: 24px 60px;
-  background: #1A5653;
-  border-radius: 999px;
-}
-.container .header .header__section div div button a {
-  text-decoration: none;
-  text-align: center;
-  font: 600 24px "Manrope";
-  color: #1A5653;
+.container .header .nav .header__ol .header__li:last-child a img {
+  width: 2.5vw;
+  height: 2.5vw;
 }
 .container .header .header__navigation a, .container .header .header__navigation p {
-  color: black;
+  color: grey;
   text-decoration: none;
   display: inline;
-  font: 400 1.1vw "Manrope";
+  font: 400 18px "Manrope";
 }
-.container .header .header__navigation a {
-  color: grey;
+.container .header .header__navigation p {
+  color: #1A5653;
 }
 .container .main {
   padding: 0 3.12vw;
@@ -284,7 +270,7 @@ body {
   border-radius: 30px;
 }
 .container .footer {
-  padding: 3.12vw 4.16vw 6.25vw 4.16vw;
+  padding: 3.12vw 6.16vw 4.25vw 4.16vw;
   background: rgb(26, 86, 83);
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
@@ -293,21 +279,24 @@ body {
   display: flex;
   justify-content: space-between;
 }
-.container .footer div .header__liFirst {
-  font: bold 28px "e-Ukraine";
-  color: #fff;
+.container .footer div .header__logo {
+  width: 250px;
+  height: 55px;
 }
 .container .footer div .footer_wrapper {
   display: flex;
 }
 .container .footer div .footer_wrapper .footer__list1 li, .container .footer div .footer_wrapper .footer__list2 li {
-  color: rgb(245, 245, 245);
   font: 300 20px "Manrope";
+  color: rgb(245, 245, 245);
   margin-bottom: 20px;
 }
 .container .footer div .footer_wrapper .footer__list1 li a, .container .footer div .footer_wrapper .footer__list2 li a {
   text-decoration: none;
   color: rgb(245, 245, 245);
+}
+.container .footer div .footer_wrapper .footer__list1 li a:hover, .container .footer div .footer_wrapper .footer__list2 li a:hover {
+  border-bottom: 1.5px solid #fff;
 }
 .container .footer div .footer_wrapper .footer__list1 {
   margin-right: 11.97vw;
@@ -445,6 +434,62 @@ body {
     margin: 0;
   }
 }
+@media screen and (max-width: 1610px) {
+  .container .header {
+    margin-bottom: 70px;
+  }
+  .container .header .nav {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+  }
+  .container .header .nav .header__logo {
+    width: 200px;
+    margin-right: 30px;
+  }
+  .container .header .nav .header__ol {
+    display: flex;
+    align-items: center;
+  }
+  .container .header .nav .header__ol .header__li {
+    margin-right: 3.125vw;
+  }
+  .container .header .nav .header__ol .header__li a {
+    text-decoration: none;
+    font: 400 15px "Manrope";
+  }
+  .container .header .nav .header__ol .header__li:last-child {
+    margin: 0;
+  }
+  .container .header .header__navigation {
+    color: #1A5653;
+  }
+  .container .header .header__navigation a, .container .header .header__navigation p {
+    color: grey;
+    text-decoration: none;
+    display: inline;
+    font: 400 14px "Manrope";
+  }
+  .container .footer {
+    padding: 3.12vw 3.16vw 3.25vw 3.16vw;
+  }
+  .container .footer div .header__logo {
+    width: 200px;
+    height: 44px;
+  }
+  .container .footer div .footer_wrapper .footer__list1 li, .container .footer div .footer_wrapper .footer__list2 li {
+    font: 300 14px "Manrope";
+    margin-bottom: 10px;
+  }
+  .container .footer div .footer_wrapper .footer__list1 li a, .container .footer div .footer_wrapper .footer__list2 li a {
+    text-decoration: none;
+    color: rgb(245, 245, 245);
+  }
+  .container .footer div .footer_wrapper .footer__list1 li:first-child {
+    font: 500 16px "Manrope";
+    margin-bottom: 40px;
+  }
+}
 @media screen and (max-width: 1500px) {
   .container .header__ol .header__li:last-child img {
     width: 30px;
@@ -455,6 +500,41 @@ body {
   }
 }
 @media screen and (max-width: 1300px) {
+  .container .header {
+    margin-bottom: 70px;
+  }
+  .container .header .nav {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
+  .container .header .nav .header__logo {
+    width: 120px;
+    margin-right: 30px;
+  }
+  .container .header .nav .header__ol {
+    display: flex;
+    align-items: center;
+  }
+  .container .header .nav .header__ol .header__li {
+    margin-right: 3.125vw;
+  }
+  .container .header .nav .header__ol .header__li a {
+    text-decoration: none;
+    font: 400 12px "Manrope";
+  }
+  .container .header .nav .header__ol .header__li:last-child {
+    margin: 0;
+  }
+  .container .header .header__navigation a, .container .header .header__navigation p {
+    color: grey;
+    text-decoration: none;
+    display: inline;
+    font: 400 10px "Manrope";
+  }
+  .container .header .header__navigation p {
+    color: #1A5653;
+  }
   .container .main .main__section1 .section1__container .section1__wrapper2 .section1__swipee_block .wrapper2__counter_block .custom-button .custom-prev, .container .main .main__section1 .section1__container .section1__wrapper2 .section1__swipee_block .wrapper2__counter_block .custom-button .custom-next {
     width: 30px;
   }
@@ -464,10 +544,77 @@ body {
   .container .main .main__section1 .section1__container .section1__wrapper2 .section1__swipee_block .swiper__container .swiper .pagination {
     --swiper-pagination-bullet-horizontal-gap: 3px;
   }
+  .container .footer {
+    padding: 3.12vw 5.16vw 3.25vw 4.16vw;
+  }
+  .container .footer div .header__logo {
+    width: 120px;
+    height: 27px;
+  }
+  .container .footer div .footer_wrapper {
+    height: 110px;
+  }
+  .container .footer div .footer_wrapper .footer__list1, .container .footer div .footer_wrapper .footer__list2 {
+    height: 100%;
+  }
+  .container .footer div .footer_wrapper .footer__list1 li, .container .footer div .footer_wrapper .footer__list2 li {
+    font: 300 10px "Manrope";
+    margin-bottom: 5px;
+  }
+  .container .footer div .footer_wrapper .footer__list1 li a, .container .footer div .footer_wrapper .footer__list2 li a {
+    text-decoration: none;
+    color: rgb(245, 245, 245);
+  }
+  .container .footer div .footer_wrapper .footer__list1 {
+    display: flex;
+    flex-direction: column;
+  }
+  .container .footer div .footer_wrapper .footer__list1 li:first-child {
+    height: 100%;
+    display: flex;
+    flex: 1;
+    font: 500 12px "Manrope";
+    margin-bottom: 0;
+  }
 }
-@media screen and (max-width: 1024px) {
-  .container .header .nav .header__liFirst {
-    font-size: 16px;
+@media screen and (max-width: 1050px) {
+  .container .header {
+    margin-bottom: 70px;
+  }
+  .container .header .nav {
+    display: flex;
+    justify-content: space-between;
+  }
+  .container .header .nav .header__ol {
+    display: flex;
+    align-items: center;
+  }
+  .container .header .nav .header__ol .header__li {
+    margin-right: 3.125vw;
+  }
+  .container .header .nav .header__ol .header__li a {
+    text-decoration: none;
+    font: 400 10px "Manrope";
+  }
+  .container .header .nav .header__ol .header__li:last-child {
+    display: flex;
+    align-items: center;
+    margin: 0;
+    cursor: pointer;
+  }
+  .container .header .nav .header__ol .header__li:last-child a {
+    display: flex;
+    align-items: center;
+  }
+  .container .header .nav .header__ol .header__li:last-child a span {
+    margin-right: 10px;
+  }
+  .container .header .nav .header__ol .header__li:last-child a img {
+    width: 2.5vw;
+    height: 2.5vw;
+  }
+  .container .header .header__navigation a, .container .header .header__navigation p {
+    font-size: 8px;
   }
 }
 @media screen and (max-width: 769px) {
@@ -480,22 +627,24 @@ body {
     overflow: hidden;
     position: relative;
     margin-bottom: 40px;
+    height: auto;
   }
   .container .header .nav {
     position: relative;
     overflow: hidden;
-    display: flex;
-    justify-content: space-between;
+    height: auto;
+    margin-bottom: 10px;
   }
-  .container .header .nav .header__liFirst {
+  .container .header .nav .header__logo_off {
     display: none;
-    font: bold 16px "e-Ukraine";
-    color: #fff;
-    margin-right: 0;
+  }
+  .container .header .nav .header__logo {
+    margin: 0;
   }
   .container .header .nav .burger__container {
     display: block;
     box-sizing: border-box;
+    padding: 0;
     width: 100%;
     height: auto;
     position: relative;
@@ -505,10 +654,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 0;
   }
   .container .header .nav .burger__container .burger__block .burder__logo_block {
     display: flex;
     align-items: center;
+    cursor: pointer;
   }
   .container .header .nav .burger__container .burger__block .burder__logo_block .burder__logo_wrapper {
     width: 30px;
@@ -523,7 +674,7 @@ body {
   }
   .container .header .nav .burger__container .burger__block .header__liFirst1 {
     font: bold 16px "e-Ukraine";
-    color: #fff;
+    color: #1A5653;
   }
   .container .header .nav .burger__container .burger__block .burger__profile img {
     width: 30px;
@@ -531,9 +682,11 @@ body {
   }
   .container .header .nav .burger__container .burger__block2 {
     display: none;
-    width: 100%;
-    height: 100vh;
-    justify-content: center;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    position: absolute;
+    height: min-content;
   }
   .container .header .nav .burger__container .burger__block2 .header__ol1 {
     position: static;
@@ -573,9 +726,6 @@ body {
   .container .header .nav .header__ol .header__li:last-child img {
     width: 30px;
     height: 30px;
-  }
-  .container .header .header__navigation a, .container .header .header__navigation p {
-    font-size: 11px;
   }
   .container .main {
     padding: 0 4.16vw;
@@ -778,30 +928,20 @@ body {
     border-radius: 30px;
   }
   .container .footer {
-    display: flex;
-    padding: 3.12vw 4.16vw 6.25vw 4.16vw;
-    background: rgb(26, 86, 83);
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    padding: 3.12vw 6.16vw 3.25vw 4.16vw;
   }
-  .container .footer div {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-  }
-  .container .footer div .header__liFirst {
-    display: block;
-    text-align: center;
-    font: bold 18px "e-Ukraine";
-    color: #fff;
-    margin-bottom: 20px;
+  .container .footer div .header__logo {
+    width: 120px;
+    height: 27px;
   }
   .container .footer div .footer_wrapper {
-    width: auto;
-    display: flex;
+    height: 90px;
+  }
+  .container .footer div .footer_wrapper .footer__list1, .container .footer div .footer_wrapper .footer__list2 {
+    height: 100%;
   }
   .container .footer div .footer_wrapper .footer__list1 li, .container .footer div .footer_wrapper .footer__list2 li {
-    font: 300 11px "Manrope";
+    font: 300 8px "Manrope";
     margin-bottom: 5px;
   }
   .container .footer div .footer_wrapper .footer__list1 li a, .container .footer div .footer_wrapper .footer__list2 li a {
@@ -809,38 +949,29 @@ body {
     color: rgb(245, 245, 245);
   }
   .container .footer div .footer_wrapper .footer__list1 {
-    margin-right: 3vw;
-    margin-bottom: 0;
+    display: flex;
+    flex-direction: column;
   }
   .container .footer div .footer_wrapper .footer__list1 li:first-child {
-    font: 500 12px "Manrope";
-    margin-bottom: 20px;
-  }
-  .container .footer div .footer_wrapper .footer__list1 li:last-child {
-    margin: 0;
-  }
-  .container .footer div .footer_wrapper .footer__list2 li:last-child {
-    margin: 0;
+    height: 100%;
+    display: flex;
+    flex: 1;
+    font: 500 10px "Manrope";
+    margin-bottom: 0;
   }
 }
-@media screen and (max-width: 440px) {
+@media screen and (max-width: 480px) {
   .container .header {
-    padding: 4.08vw 4.16vw 0 4.16vw;
     overflow: hidden;
     position: relative;
     margin-bottom: 40px;
+    padding: 4.16vw 4.16vw 0 4.16vw;
   }
   .container .header .nav {
     position: relative;
     overflow: hidden;
     display: flex;
     justify-content: space-between;
-  }
-  .container .header .nav .header__liFirst {
-    display: none;
-    font: bold 16px "e-Ukraine";
-    color: #fff;
-    margin-right: 0;
   }
   .container .header .nav .burger__container {
     display: block;
@@ -855,7 +986,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 0;
   }
   .container .header .nav .burger__container .burger__block .burder__logo_block {
     display: flex;
@@ -882,9 +1012,6 @@ body {
   }
   .container .header .nav .burger__container .burger__block2 {
     display: none;
-    width: 100%;
-    height: 100vh;
-    justify-content: center;
   }
   .container .header .nav .burger__container .burger__block2 .header__ol1 {
     position: static;
@@ -1121,22 +1248,17 @@ body {
     display: flex;
     justify-content: center;
     padding: 40px 0;
-    background: rgb(26, 86, 83);
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
   }
   .container .footer div {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-  .container .footer div .header__liFirst {
-    display: block;
-    text-align: center;
-    font: bold 18px "e-Ukraine";
-    color: #fff;
-    margin: 0;
+  .container .footer div .header__logo {
     margin-bottom: 20px;
   }
   .container .footer div .footer_wrapper {
+    height: auto;
     display: block;
   }
   .container .footer div .footer_wrapper .footer__list1 li, .container .footer div .footer_wrapper .footer__list2 li {
@@ -1144,22 +1266,17 @@ body {
     font: 300 9px "Manrope";
     margin-bottom: 5px;
   }
-  .container .footer div .footer_wrapper .footer__list1 li a, .container .footer div .footer_wrapper .footer__list2 li a {
-    text-decoration: none;
-    color: rgb(245, 245, 245);
-  }
   .container .footer div .footer_wrapper .footer__list1 {
     margin-right: 0;
     margin-bottom: 20px;
+    height: min-content;
   }
   .container .footer div .footer_wrapper .footer__list1 li:first-child {
     font: 500 10px "Manrope";
     margin-bottom: 12px;
+    flex: 0;
   }
   .container .footer div .footer_wrapper .footer__list1 li:last-child {
-    margin: 0;
-  }
-  .container .footer div .footer_wrapper .footer__list2 li:last-child {
     margin: 0;
   }
 }/*# sourceMappingURL=Instruction.css.map */
