--- a/sass/Main.sass
+++ b/sass/Main.sass
@@ -914,6 +914,7 @@ body
                                 width: 30px
                                 height: 30px
                     .burger__block2
+                        width: auto
                         display: none
                         transform: translate(-50%, -50%)
                         left: 50%
@@ -1172,7 +1173,7 @@ body
                 .footer_wrapper
                     height: 90px
                     .footer__list1 ,.footer__list2
-                        height: 100%
+                        height: min-content
                         li
                             font: 300 8px 'Manrope'
                             margin-bottom: 5px
@@ -1236,7 +1237,7 @@ body
                                 height: 30px
                     .burger__block2
                         display: none
-                        width: 100%
+                        width: auto
                         position: absolute
                         top: 50%
                         left: 50%
